fixed alignment

--- a/style.css
+++ b/style.css
@@ -17,9 +17,9 @@ h2 {
 
 h1 {
   color: #55c2da;
+  margin-top: 4rem;
 }
 
-h1,
 h3 {
   margin-top: 2rem;
 }
